<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/vg_title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_favorite_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="@string/title_favorite_add" />

        <EditText
            android:id="@+id/edt_favorite_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_comment"
            android:maxLength="140"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/vg_title_holder"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_to_favorite"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_remove_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_remove_from_favorite"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textSize="11sp" />

    </LinearLayout>

</RelativeLayout>